namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: nitnc-apps
    app.kubernetes.io/name: nitnc-apps
  name: nitnc-apps
