lincoln.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d1-bot-lincoln
  namespace: nitnc-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: d1-bot-lincoln
  strategy: {}
  template:
    metadata:
      name: d1-bot-lincoln
      labels:
        app: d1-bot-lincoln
    spec:
      containers:
        - env:
            - name: DISCORD_TOKEN
              valueFrom:
                secretKeyRef:
                  name: nitnc-d1-lincoln-secret
                  key: DISCORD_TOKEN
            - name: DISCORD_CLIENTID
              valueFrom:
                secretKeyRef:
                  name: nitnc-d1-lincoln-secret
                  key: DISCORD_CLIENTID
            - name: DISCORD_GUILDID
              valueFrom:
                secretKeyRef:
                  name: nitnc-d1-lincoln-secret
                  key: DISCORD_GUILDID
            - name: PASSPHRASE
              valueFrom:
                secretKeyRef:
                  name: nitnc-d1-lincoln-secret
                  key: PASSPHRASE
            - name: SALT
              valueFrom:
                secretKeyRef:
                  name: nitnc-d1-lincoln-secret
                  key: SALT
            - name: DISCORD_CHANK_CHID
              valueFrom:
                secretKeyRef:
                  name: nitnc-d1-lincoln-secret
                  key: DISCORD_CHANK_CHID
            - name: DISCORD_FACTBOOK_CHID
              valueFrom:
                secretKeyRef:
                  name: nitnc-d1-lincoln-secret
                  key: DISCORD_FACTBOOK_CHID
            - name: CSV_CHID
              valueFrom:
                secretKeyRef:
                  name: nitnc-d1-lincoln-secret
                  key: CSV_CHID
            - name: CHANK_RANGE_ID
              valueFrom:
                secretKeyRef:
                  name: nitnc-d1-lincoln-secret
                  key: CHANK_RANGE_ID
            - name: FACT_RANGE_ID
              valueFrom:
                secretKeyRef:
                  name: nitnc-d1-lincoln-secret
                  key: FACT_RANGE_ID
            - name: INTERVAL
              value: "300"
          volumeMounts:
            - name: d1-bot-lincoln
              mountPath: /conf/
          image: ghcr.io/smallbasic-n/d1-bot-lincoln:v0.0.19
          name: main
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 10Mi
          ports:
            - containerPort: 80
              name: port
      restartPolicy: Always
      volumes:
        - name: d1-bot-lincoln
          persistentVolumeClaim:
            claimName: d1-bot-lincoln
